audio, drivers, fixes

--- a/config
+++ b/config
@@ -1,12 +1,16 @@
 disk1="sda1"
 disk2="sda2"
-username="kota"
+username="olive"
 hostname="pluto"
-timezone="America/Chicago"
+timezone="America/Indianapolis"
 keyboard_layout="us"
 locale="en_US.UTF-8"
-swap_size="2GB"
+swap_size="1GB"
 root_password="pass"
 user_password="pass"
+nvidia="true"
+intel_cpu="true"
+desktop="true"
+display_manager="sddm"
 install_grub="true"
 install_efi="true"
